[package]
name = "boogeyman"
version = "0.1.0"
authors = ["Farhan Kurnia Pratama <contact@fkp.my.id>"]
edition = "2024"
rust-version = "1.85"
description = "A simple and blazingly fast unit conversion API powered by Rust"
documentation = "https://fkp.my.id/projects/boogeyman/docs/"
readme = "README.md"
homepage = "https://fkp.my.id/projects/boogeyman/"
repository = "https://github.com/farhnkrnapratma/boogeyman"
license = "MIT"
keywords = ["converter", "api", "measurement"]
categories = ["api-bindings", "command-line-utilities", "mathematics", "science"]
publish = true

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.10"
serde = { version = "1.0.228", features = ["std", "derive"] }
